[package]
name = "isc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
rayon = "1.7.0"
sha2 = { version = "0.10.6", features = ["asm-aarch64"] }
