[package]
name = "isc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
futures = "0.3.27"
rayon = "1.7.0"
sha2 = { version = "0.10.6", features = ["asm-aarch64"] }
tokio = { version = "1.26.0", features = ["fs", "rt", "rt-multi-thread"] }

[profile.release]
debug = true
